@@ -271,7 +271,7 @@ class Exported:
         hub = self.hub
         pypisubmit = self.hub.current.pypisubmit
         cwd = self.rootpath
-        user, password = self.hub.current.auth or ("test", "test")
+        user, password = self._getuserpassword()
         if hub.args.dryrun:
             hub.info("would register package at", cwd, "to", pypisubmit)
             return
@@ -285,7 +285,7 @@ class Exported:
             hub.fatal(out + "\n", "release registration failed\n")
 
     def _getuserpassword(self):
-        auth = self.hub.current.auth
+        auth = self.hub.current.get_auth()
         if auth:
             return auth
         return "_test", "test"
