@@ -25,12 +25,11 @@ def currentproperty(name):
 class Current(object):
     index = currentproperty("index")
     simpleindex = currentproperty("simpleindex")
-    bases = currentproperty("bases")
     pypisubmit = currentproperty("pypisubmit")
     login = currentproperty("login")
     resultlog = currentproperty("resultlog")
     venvdir = currentproperty("venvdir")
-    auth = currentproperty("auth")
+    _auth = currentproperty("auth")
 
     def __init__(self, path):
         self.path = path
@@ -43,6 +42,27 @@ class Current(object):
             d.update(json.loads(self.path.read()))
         else:
             log.debug("no client config found at %s" % self.path)
+
+    def _get_auth_dict(self):
+        auth = self._auth
+        if not isinstance(auth, dict):
+            auth = {}
+        return auth
+
+    def set_auth(self, user, password, url=None):
+        if url is None:
+            url = self.rooturl
+        auth = self._get_auth_dict()
+        auth[url] = (user, password)
+        self.reconfigure(data=dict(_auth=auth))
+
+    def get_auth_user(self):
+        return self._get_auth_dict().get(self.rooturl, [None])[0]
+
+    def get_auth(self, url=None):
+        url = url if url is not None else self.rooturl
+        auth = self._get_auth_dict().get(url)
+        return tuple(auth) if auth else None
 
     def reconfigure(self, data):
         for name in data:
@@ -73,11 +93,15 @@ class Current(object):
         if not urlutil.is_valid_url(url):
             hub.fatal("invalid URL: %s" % url)
         r = hub.http_api("get", url.rstrip("/") + "/+api", quiet=True)
-        assert r.status_code == 200
-        data = {}
         rooturl = urlutil.getnetloc(url, scheme=True)
-        for name in r["result"]:
-            data[name] = urlutil.joinpath(rooturl, r["result"][name])
+        result = r["result"]
+        data = {}
+        url_keys = set("index simpleindex pypisubmit resultlog login".split())
+        for name in url_keys:
+            val = result.get(name, None)
+            if val is not None:
+                val = urlutil.joinpath(rooturl, val)
+            data[name] = val
         self.reconfigure(data)
 
     def getvenvbin(self, name, venvdir=None, glob=True):
@@ -95,7 +119,11 @@ class Current(object):
     def rooturl(self):
         return urlutil.joinpath(self.login, "/")
 
-    def get_user_url(self, user):
+    def get_user_url(self, user=None):
+        if user is None:
+            user = self.get_auth_user()
+            if not user:
+                raise ValueError("no current authenticated user")
         return urlutil.joinpath(self.rooturl, user)
 
     def get_index_url(self, indexname=None, slash=True):
@@ -104,8 +132,7 @@ class Current(object):
             if indexname is None:
                 raise ValueError("no index name")
         if "/" not in indexname:
-            assert self.auth[0]
-            userurl = self.get_user_url(self.auth[0])
+            userurl = self.get_user_url()
             return urlutil.joinpath(userurl + "/", indexname)
         url = urlutil.joinpath(self.rooturl, indexname)
         url = url.rstrip("/")
@@ -161,28 +188,29 @@ def main(hub, args=None):
 
     showurls = args.urls or args.debug
 
+    user = current.get_auth_user()
+    if user:
+        login_status = "logged in as %s" % user
+    else:
+        login_status = "not logged in"
     if current.rooturl and current.rooturl != "/":
         if showurls or not current.index:
-            hub.info("connected to: " + current.rooturl)
+            hub.info("connected to: %s (%s)" % (current.rooturl, login_status))
 
     if showurls:
         for name in "index simpleindex pypisubmit resultlog login".split():
             hub.info("%16s: %s" %(name, getattr(current, name)))
     else:
         if not current.index:
-            hub.error("not using any index (use 'index -l')")
+            hub.error("not using any index ('index -l' to discover, then "
+                      "'use NAME' to use one)")
         else:
-            hub.info("using index:  " + current.index)
+            hub.info("using index: %s (%s)" % (current.index, login_status))
     if current.venvdir:
         hub.info("install venv: %s" % current.venvdir)
     else:
         hub.line("no current install venv set")
 
-    if current.auth:
-        user, password = current.auth
-        hub.info("logged in as: %s" % user)
-    else:
-        hub.line("not currently logged in")
 
 
 def parse_keyvalue_spec(keyvaluelist, keyset=None):
